--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 
                 <div class="box"></div>
             </div>
-            
+            <div id="playlist">
+                <audio src="birthday.mp3" hidden loopid="play"></audio>
+            </div>
             <div class="icons">
                 <div class="row">
                     <span>H</span>
